Implement letter display functionality and enhance letter saving logic

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,6 +15,10 @@
         <textarea id="message" placeholder="Write your letter here..." required></textarea><br>
         <button type="submit">Save Letter</button>
     </form>
+    <hr>
+
+<h2>Saved Letters 💌</h2>
+<div id="lettersContainer"></div>
 
     <script src="script.js"></script>
 
