Update title and rearrange HTML structure for improved clarity and consistency

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Violet TimeCapsule 💌</title>
+    <title>Violet TimeCapsule 💜</title>
 
-    <!-- Premium Typography -->
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;600&family=Playfair+Display:wght@500&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <h1>Violet TimeCapsule 💜</h1>
+    <!-- Flower Animation Canvas -->
+    <canvas id="flowerCanvas"></canvas>
+
+    <h1>Violet TimeCapsule 💌</h1>
 
     <div class="glass-card">
         <form id="letterForm">
 
             <input type="text" id="sender" placeholder="Your Name" required>
-
             <input type="email" id="recipient" placeholder="Recipient Email" required>
 
             <label>Delivery Date</label>
@@ -36,7 +37,6 @@
             <textarea id="message" placeholder="Write your heartfelt letter here..." required></textarea>
 
             <button type="submit">Seal Envelope ✉️</button>
-
         </form>
     </div>
 
